# django-template

./: .gitignore  pyproject.toml
src/config/: urls.py
src/config/settings/: base.py  prod.py
src/main/: apps.py
src/main/migrations/: 0001_initial.py
src/main/static/: site.webmanifest
src/main/static/admin/: base_site.html
