[tool.poetry]
name = "Django template project"
version = "1.0.0"
description = "Basic template for Django projects, uses settings as package and defaults to whitenoise staticfiles serving."
authors = ["BlackWarlow <blackwarlow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-baton = "^2.7.1"
whitenoise = "^6.4.0"
black = "^23.3.0"
djlint = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
